--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "gatsby-plugin-netlify": "2.6.0",
     "gatsby-plugin-offline": "3.5.0",
     "gatsby-plugin-react-helmet": "3.5.0",
+    "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "2.9.1",
     "gatsby-plugin-sitemap": "2.7.0",
