--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
     "font-awesome": "4.7.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.17",
     "jquery": "3.5.1",
     "modern-normalize": "1.0.0",
     "node-sass": "4.14.1",
