Incorporated Bootstrap 5 beta.
I incorporated the Bootstrap 5 beta and got it up and running, but I will need to adjust the styles on the website a little bit. Bootstrap 5 broke a couple of things, but nothing major. :smile:

--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "0.1.13",
+    "@popperjs/core": "^2.5.4",
     "@types/node": "^14.14.10",
     "@types/react-helmet": "6.1.0",
     "@typescript-eslint/eslint-plugin": "4.9.0",
     "animate.css": "4.1.1",
-    "bootstrap": "4.5.3",
+    "bootstrap": "^5.0.0-beta1",
     "emergence.js": "1.1.2",
     "eslint": "7.14.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -43,9 +44,7 @@
     "jquery": "3.5.1",
     "modern-normalize": "1.0.0",
     "node-sass": "4.14.1",
-    "popper.js": "1.16.1",
     "react": "17.0.1",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
     "stylelint": "^13.8.0",
