--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "4.1.2"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^3.13.0",
     "gatsby": "2.27.5",
     "gatsby-image": "2.6.0",
     "gatsby-link": "2.6.1",
