--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jquery": "3.5.1",
     "modern-normalize": "1.0.0",
     "node-sass": "4.14.1",
+    "purify-ts": "^0.16.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
