Added Netlify plugin to package.json.
Forgot to add it earlier!

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.17",
     "jquery": "3.5.1",
     "modern-normalize": "1.0.0",
+    "netlify-plugin-gatsby-cache": "^0.3.2",
     "node-sass": "4.14.1",
     "purify-ts": "^0.16.1",
     "react": "17.0.1",
