--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "virtual.furnalequinox.com",
   "description": "The web platform for Furnal Equinox's virtual convention",
   "version": "1.0.0",
-  "author": "Furnal Equinox",
+  "author": "Anthropomorphic Events of Ontario",
   "repository": {
     "type": "git",
     "url": "https://github.com/willowell/virtual.furnalequinox.com"
