--- a/package.json
+++ b/package.json
@@ -19,18 +19,29 @@
     "lint-words": "textlint ./content/posts/**/index.md",
     "plzfixmycode": "npx eslint ./src/**/* --fix",
     "plzfixmystyles": "npx stylelint ./src/**/**/*.scss --fix",
-    "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix"
+    "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "0.1.13",
     "@popperjs/core": "^2.5.4",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/react": "^6.1.11",
     "@types/node": "^14.14.10",
     "@types/react-helmet": "6.1.0",
     "@typescript-eslint/eslint-plugin": "4.9.0",
     "animate.css": "4.1.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-remove-graphql-queries": "^2.13.0",
+    "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^5.0.0-beta1",
     "emergence.js": "1.1.2",
     "eslint": "7.14.0",
