--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.11",
     "@types/node": "^14.14.14",
     "@types/react-helmet": "6.1.0",
@@ -43,6 +44,7 @@
     "babel-plugin-remove-graphql-queries": "^2.13.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^5.0.0-beta1",
+    "css-loader": "^5.0.1",
     "emergence.js": "1.1.2",
     "eslint": "7.16.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -60,6 +62,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-sass-guidelines": "^7.1.0",
     "textlint": "11.7.6",
