--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "lint-code": "npx eslint ./src/**/*",
+    "lint-code": "npx eslint ./src --ext .js --ext .jsx --ext .ts --ext .tsx",
     "lint-styles": "npx stylelint ./src/**/**/*.scss",
     "lint-words": "textlint ./content/posts/**/index.md",
-    "plzfixmycode": "npx eslint ./src/**/* --fix",
+    "plzfixmycode": "npx eslint ./src --ext .js --ext .jsx --ext .ts --ext .tsx --fix",
     "plzfixmystyles": "npx stylelint ./src/**/**/*.scss --fix",
     "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix",
     "storybook": "start-storybook -p 6006",
