--- a/package.json
+++ b/package.json
@@ -27,79 +27,80 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@fortawesome/fontawesome-svg-core": "1.2.32",
-    "@fortawesome/free-brands-svg-icons": "5.15.1",
-    "@fortawesome/free-solid-svg-icons": "5.15.1",
-    "@fortawesome/react-fontawesome": "0.1.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.6.0",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.11",
-    "@types/node": "^14.14.14",
-    "@types/react-helmet": "6.1.0",
-    "@typescript-eslint/eslint-plugin": "4.10.0",
-    "animate.css": "4.1.1",
+    "@types/node": "^14.14.16",
+    "@types/react-helmet": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "animate.css": "^4.1.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-remove-graphql-queries": "^2.13.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^5.0.0-beta1",
     "chromatic": "^5.5.0",
     "css-loader": "^5.0.1",
-    "emergence.js": "1.1.2",
-    "eslint": "7.16.0",
+    "emergence.js": "^1.1.2",
+    "eslint": "^7.16.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
-    "font-awesome": "4.7.0",
+    "font-awesome": "^4.7.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.18",
-    "jquery": "3.5.1",
-    "modern-normalize": "1.0.0",
+    "jquery": "^3.5.1",
+    "modern-normalize": "^1.0.0",
     "netlify-plugin-gatsby-cache": "^0.3.2",
     "node-sass": "4.14.1",
     "purify-ts": "^0.16.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-helmet": "6.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-sass-guidelines": "^7.1.0",
-    "textlint": "11.7.6",
+    "textlint": "^11.7.7",
     "textlint-rule-write-good": "^1.6.2",
-    "typescript": "4.1.3"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^3.13.0",
     "@reach/dialog": "^0.12.1",
     "@reach/tabs": "^0.12.1",
     "@reach/visually-hidden": "^0.12.0",
-    "gatsby": "2.29.1",
-    "gatsby-image": "2.8.0",
-    "gatsby-link": "2.8.0",
-    "gatsby-plugin-catch-links": "2.7.0",
+    "gatsby": "^2.29.2",
+    "gatsby-image": "^2.8.0",
+    "gatsby-link": "^2.8.0",
+    "gatsby-plugin-catch-links": "^2.7.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-local-search": "^2.0.0",
-    "gatsby-plugin-manifest": "2.9.0",
-    "gatsby-plugin-netlify": "2.8.0",
+    "gatsby-plugin-manifest": "^2.9.1",
+    "gatsby-plugin-netlify": "^2.8.0",
     "gatsby-plugin-netlify-identity": "^0.0.3",
-    "gatsby-plugin-react-helmet": "3.7.0",
+    "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "2.11.1",
-    "gatsby-plugin-sitemap": "2.9.0",
-    "gatsby-plugin-twitter": "2.7.0",
+    "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-plugin-sitemap": "^2.9.0",
+    "gatsby-plugin-twitter": "^2.7.0",
     "gatsby-plugin-typescript": "^2.9.0",
-    "gatsby-remark-copy-linked-files": "2.7.0",
-    "gatsby-remark-images": "3.8.0",
-    "gatsby-remark-responsive-iframe": "2.8.0",
-    "gatsby-remark-smartypants": "2.7.0",
-    "gatsby-source-filesystem": "2.8.0",
-    "gatsby-transformer-remark": "2.13.0",
-    "gatsby-transformer-sharp": "2.9.0",
+    "gatsby-remark-copy-linked-files": "^2.7.0",
+    "gatsby-remark-images": "^3.8.1",
+    "gatsby-remark-responsive-iframe": "^2.8.0",
+    "gatsby-remark-smartypants": "^2.7.0",
+    "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-transformer-remark": "^2.13.1",
+    "gatsby-transformer-sharp": "^2.9.0",
     "react-icons": "^4.1.0",
     "react-netlify-identity-widget": "^0.2.7",
     "react-player": "^2.7.2"
