Added script to package.json for deploying the website

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "chromatic"
+    "chromatic": "chromatic",
+    "deploy-prod": "netlify build && netlify deploy --prod"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
