Added a Haskell script that runs pa11y over a set of URLs from the website and saves the reports

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build-storybook": "build-storybook",
     "chromatic": "chromatic",
     "netlify-build": "netlify build",
-    "netlify-deploy-prod": "netlify build && netlify deploy --prod"
+    "netlify-deploy-prod": "netlify build && netlify deploy --prod",
+    "pa11y": "stack ./scripts/pa11yRunner.hs"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
