--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chromatic": "chromatic",
     "netlify-build": "netlify build",
     "netlify-deploy-prod": "netlify build && netlify deploy --prod",
-    "pa11y": "stack ./scripts/pa11yRunner.hs"
+    "run-pa11y": "stack ./scripts/pa11yRunner.hs"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
