--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
     publish = "public"
     command = "npm run build"
+    functions = "functions"
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
