--- a/package.json
+++ b/package.json
@@ -101,10 +101,12 @@
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-remark": "^2.13.1",
     "gatsby-transformer-sharp": "^2.9.0",
+    "node-fetch": "^2.6.1",
     "query-string": "^6.13.7",
     "react-icons": "^4.1.0",
     "react-netlify-identity-widget": "^0.2.7",
     "react-player": "^2.7.2",
-    "react-use-flexsearch": "^0.1.1"
+    "react-use-flexsearch": "^0.1.1",
+    "stripe": "^8.129.0"
   }
 }
