--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@hookform/resolvers": "^1.3.2",
     "@icons-pack/react-simple-icons": "^3.13.0",
     "@reach/dialog": "^0.12.1",
     "@reach/tabs": "^0.12.1",
@@ -87,7 +88,7 @@
     "gatsby-plugin-local-search": "^2.0.0",
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-netlify": "^2.8.0",
-    "gatsby-plugin-netlify-identity": "^0.0.3",
+    "gatsby-plugin-netlify-identity-gotrue": "^0.3.2",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-sass": "^2.8.0",
@@ -103,11 +104,14 @@
     "gatsby-transformer-remark": "^2.13.1",
     "gatsby-transformer-sharp": "^2.9.0",
     "node-fetch": "^2.6.1",
+    "password-validator": "^5.1.1",
     "query-string": "^6.13.7",
+    "react-hook-form": "^6.14.1",
     "react-icons": "^4.1.0",
     "react-netlify-identity-widget": "^0.2.7",
     "react-player": "^2.7.2",
     "react-use-flexsearch": "^0.1.1",
-    "stripe": "^8.129.0"
+    "stripe": "^8.129.0",
+    "yup": "^0.32.8"
   }
 }
