--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "chromatic",
+    "chromatic": "chromatic --auto-accept-changes",
     "netlify-develop": "netlify dev",
     "netlify-build": "netlify build",
     "netlify-deploy-prod": "netlify build && netlify deploy --prod",
@@ -89,6 +89,7 @@
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-netlify": "^2.8.0",
     "gatsby-plugin-netlify-identity-gotrue": "^0.3.2",
+    "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-sass": "^2.8.0",
