--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "node-fetch": "^2.6.1",
     "password-validator": "^5.1.1",
     "query-string": "^6.13.7",
+    "react-bootstrap": "^1.4.3",
     "react-hook-form": "^6.14.1",
     "react-icons": "^4.1.0",
     "react-player": "^2.7.2",
