--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,12 @@
 [build]
-    publish = "public"
-    command = "npm run build"
-    functions = "functions"
+  publish = "public"
+  command = "npm run build"
+  functions = "functions"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
