--- a/functions/create-manage-link/package.json
+++ b/functions/create-manage-link/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-manage-link",
   "version": "1.0.0",
-  "main": "create-manage-link.js",
+  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.1",
