--- a/functions/handle-subscription-change/package.json
+++ b/functions/handle-subscription-change/package.json
@@ -1,7 +1,7 @@
 {
   "name": "handle-subscription-change",
   "version": "1.0.0",
-  "main": "handle-subscription-change.js",
+  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.1",
