--- a/functions/identity-signup/package.json
+++ b/functions/identity-signup/package.json
@@ -1,7 +1,7 @@
 {
   "name": "identity-signup",
   "version": "1.0.0",
-  "main": "identity-signup.js",
+  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.1",
