Working on adding Stripe Checkout

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-CHROMATIC_PROJECT_TOKEN=abcd1234
+CHROMATIC_PROJECT_TOKEN=
+FAUNA_SERVER_KEY=
+GATSBY_STRIPE_PUBLISHABLE_KEY=
+STRIPE_DEFAULT_PRICE_PLAN=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
