--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@reach/dialog": "^0.12.1",
     "@reach/tabs": "^0.12.1",
     "@reach/visually-hidden": "^0.12.0",
+    "@stripe/stripe-js": "^1.11.0",
     "gatsby": "^2.29.2",
     "gatsby-image": "^2.8.0",
     "gatsby-link": "^2.8.0",
@@ -102,6 +103,7 @@
     "gatsby-remark-responsive-iframe": "^2.8.0",
     "gatsby-remark-smartypants": "^2.7.0",
     "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-source-stripe": "^3.2.1",
     "gatsby-transformer-remark": "^2.13.1",
     "gatsby-transformer-sharp": "^2.9.0",
     "node-fetch": "^2.6.1",
