--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-netlify": "^2.10.0",
     "gatsby-plugin-netlify-identity-gotrue": "^0.3.3",
+    "gatsby-plugin-nprogress": "^2.9.0",
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
