--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "netlify-deploy-prod": "netlify build && netlify deploy --prod",
     "run-pa11y": "stack ./scripts/pa11yRunner.hs"
   },
+  "ts-standard": {
+    "project": "./tsconfig.json"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
@@ -43,7 +46,6 @@
     "@storybook/react": "^6.1.15",
     "@types/node": "^14.14.22",
     "@types/react-helmet": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
     "animate.css": "^4.1.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-remove-graphql-queries": "^2.15.0",
@@ -52,12 +54,6 @@
     "chromatic": "^5.6.1",
     "css-loader": "^5.0.1",
     "emergence.js": "^1.1.2",
-    "eslint": "^7.18.0",
-    "eslint-config-standard-with-typescript": "^19.0.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0",
     "font-awesome": "^4.7.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.18",
     "jquery": "^3.5.1",
@@ -72,6 +68,7 @@
     "stylelint-config-sass-guidelines": "^7.1.0",
     "textlint": "^11.8.1",
     "textlint-rule-write-good": "^1.6.2",
+    "ts-standard": "^10.0.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
