--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 CHROMATIC_PROJECT_TOKEN=
 FAUNA_SERVER_KEY=
+GA_TRACKING_ID=
 GATSBY_STRIPE_PUBLISHABLE_KEY=
 STRIPE_DEFAULT_PRICE_PLAN=
 STRIPE_SECRET_KEY=
