--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@reach/tabs": "^0.12.1",
     "@reach/visually-hidden": "^0.12.0",
     "@stripe/stripe-js": "^1.11.0",
+    "body-parser": "^1.19.0",
+    "date-fns": "^2.16.1",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
     "gatsby-link": "^2.10.0",
@@ -104,6 +106,7 @@
     "gatsby-source-stripe": "^3.2.1",
     "gatsby-transformer-remark": "^2.15.0",
     "gatsby-transformer-sharp": "^2.11.0",
+    "gotrue-js": "^0.9.28",
     "node-fetch": "^2.6.1",
     "password-validator": "^5.1.1",
     "query-string": "^6.13.8",
@@ -112,6 +115,7 @@
     "react-icons": "^4.1.0",
     "react-player": "^2.8.1",
     "react-use-flexsearch": "^0.1.1",
+    "secure-random-password": "^0.2.2",
     "yup": "^0.32.8"
   }
 }
