ESLint run and some adjustments to incorporate TS into the Netlify Functions

--- a/package.json
+++ b/package.json
@@ -14,22 +14,20 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "lint-code": "npx eslint ./src --ext .js --ext .jsx --ext .ts --ext .tsx",
+    "lint-code": "yarn ts-standard ./src --project ./tsconfig.json;  yarn ts-standard ./functions --project ./functions/tsconfig.json",
     "lint-styles": "npx stylelint ./src/**/**/*.scss",
     "lint-words": "textlint ./content/posts/**/index.md",
-    "plzfixmycode": "npx eslint ./src --ext .js --ext .jsx --ext .ts --ext .tsx --fix",
+    "plzfixmycode": "yarn ts-standard ./src --fix --project ./tsconfig.json;  yarn ts-standard ./functions --fix --project ./functions/tsconfig.json",
     "plzfixmystyles": "npx stylelint ./src/**/**/*.scss --fix",
     "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "chromatic": "chromatic --auto-accept-changes",
-    "netlify-develop": "netlify dev",
-    "netlify-build": "netlify build",
-    "netlify-deploy-prod": "netlify build && netlify deploy --prod",
-    "run-pa11y": "stack ./scripts/pa11yRunner.hs"
-  },
-  "ts-standard": {
-    "project": "./tsconfig.json"
+    "netlify-functions-build": "tsc --project \"./functions/tsconfig.json\"",
+    "netlify-functions-clean": "rimraf ./functions/build",
+    "run-pa11y": "stack ./scripts/pa11yRunner.hs",
+    "clean-all": "yarn clean && yarn netlify-functions-clean",
+    "build-all": "yarn netlify-functions-build && yarn build"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -44,8 +42,10 @@
     "@storybook/addon-links": "^6.1.15",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.15",
+    "@types/aws-lambda": "^8.10.3",
     "@types/node": "^14.14.22",
     "@types/react-helmet": "^6.1.0",
+    "@types/secure-random-password": "^0.2.0",
     "animate.css": "^4.1.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-remove-graphql-queries": "^2.15.0",
@@ -60,6 +60,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
