--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "public"
-  command = "yarn build"
-  functions = "functions"
+  command = "yarn build-all"
+  functions = "functions/build"
 
 [[redirects]]
   from = "/api/*"
