--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ CHROMATIC_PROJECT_TOKEN=
 FAUNA_SERVER_KEY=
 GA_TRACKING_ID=
 GATSBY_STRIPE_PUBLISHABLE_KEY=
+REGFOX_WEBHOOK_SECRET=
 STRIPE_DEFAULT_PRICE_PLAN=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
