Removed GoTrue and found a const bug
* Removed GoTrue because I was not using it
* Changed `const roles: Role[] = []` to `let roles: Role[] = ['free']` - I suspect the roles are not showing up in NI because TS wasn't letting the `roles.push('adult')` happen. For the same reason and because we have decided on it, the default role is `free` and `adult` is the only other role.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 
 # Do not track the build output in public
 public
+functions/build
 
 # Do not track Storybook's build folder
 storybook-static
