--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@stripe/stripe-js": "^1.11.0",
     "body-parser": "^1.19.0",
     "date-fns": "^2.16.1",
+    "faunadb": "^4.0.3",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
     "gatsby-link": "^2.10.0",
