CSP adjustments and permissions policy

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,38 @@
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Permissions-Policy = '''
+      accelerometer 'none';
+      ambient-light-sensor 'none';
+      autoplay 'self';
+      battery 'none';
+      camera 'none';
+      display-capture 'none';
+      document-domain 'none';
+      encrypted-media 'self';
+      execution-while-not-rendered 'self';
+      fullscreen 'self';
+      geolocation 'none';
+      gyroscope 'none';
+      layout-animations 'self';
+      legacy-image-formats 'self';
+      magnetometer 'none';
+      microphone 'none';
+      midi 'none';
+      navigation-override 'self';
+      oversize-images 'self';
+      payment 'none';
+      picture-in-picture 'self';
+      publickey-credentials-get 'self';
+      sync-xhr '*';
+      usb 'none';
+      vr 'none';
+      wake-lock 'none';
+      screen-wake-lock 'none';
+      web-share 'self';
+      xr-spatial-tracking 'none';
+    '''
