--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.13.1",
     "gatsby-plugin-sitemap": "^2.11.0",
