Hooked the charity meter up to the DB, added the mutator for the total donation amount to the registration handler, renamed the navbar, and added logic in identity-signup to pull the user's furname from the DB for use in the navbar

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
 CHROMATIC_PROJECT_TOKEN=
+DONATION_GOAL=
 FAUNA_SERVER_KEY=
 GA_TRACKING_ID=
-GATSBY_STRIPE_PUBLISHABLE_KEY=
+INTERVAL_IN_MS_TO_CHECK_TOTAL_DONATION_AMOUNT=
 REGFOX_DONATION_WEBHOOK_SECRET=
 REGFOX_REGISTRATION_WEBHOOK_SECRET=
-STRIPE_DEFAULT_PRICE_PLAN=
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
