--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "gatsby-link": "^2.10.0",
     "gatsby-plugin-catch-links": "^2.9.0",
     "gatsby-plugin-csp": "^1.1.3",
+    "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-local-search": "^2.0.0",
     "gatsby-plugin-manifest": "^2.11.0",
