Move total fetching to the backend to protect the Fauna server key

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 CHROMATIC_PROJECT_TOKEN=
-DONATION_GOAL=
 FAUNA_SERVER_KEY=
+FAUNA_TOTALS_KEY=
 GA_TRACKING_ID=
-INTERVAL_IN_MS_TO_CHECK_TOTAL_DONATION_AMOUNT=
+GATSBY_DONATION_GOAL=
+GATSBY_INTERVAL_IN_MS_TO_CHECK_TOTAL_DONATION_AMOUNT=
 REGFOX_DONATION_WEBHOOK_SECRET=
 REGFOX_REGISTRATION_WEBHOOK_SECRET=
