--- a/package.json
+++ b/package.json
@@ -116,7 +116,9 @@
     "react-bootstrap": "^1.4.3",
     "react-hook-form": "^6.14.2",
     "react-icons": "^4.1.0",
+    "react-parallax": "^3.2.1",
     "react-player": "^2.8.1",
+    "react-responsive-masonry": "2.1.1",
     "react-use-flexsearch": "^0.1.1",
     "secure-random-password": "^0.2.2",
     "yup": "^0.32.8"
