--- a/package.json
+++ b/package.json
@@ -30,97 +30,97 @@
     "build-all": "yarn netlify-functions-build && yarn build"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@popperjs/core": "^2.6.0",
-    "@storybook/addon-actions": "^6.1.15",
-    "@storybook/addon-essentials": "^6.1.15",
-    "@storybook/addon-links": "^6.1.15",
+    "@popperjs/core": "^2.8.6",
+    "@storybook/addon-actions": "^6.1.20",
+    "@storybook/addon-essentials": "^6.1.20",
+    "@storybook/addon-links": "^6.1.20",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.1.15",
-    "@types/aws-lambda": "^8.10.3",
-    "@types/node": "^14.14.22",
+    "@storybook/react": "^6.1.20",
+    "@types/aws-lambda": "^8.10.72",
+    "@types/node": "^14.14.31",
     "@types/react-helmet": "^6.1.0",
     "@types/secure-random-password": "^0.2.0",
     "animate.css": "^4.1.1",
     "babel-loader": "^8.2.2",
-    "babel-plugin-remove-graphql-queries": "^2.15.0",
+    "babel-plugin-remove-graphql-queries": "^2.16.1",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^5.0.0-beta1",
-    "chromatic": "^5.6.1",
-    "css-loader": "^5.0.1",
+    "chromatic": "^5.6.3",
+    "css-loader": "^5.1.0",
     "font-awesome": "^4.7.0",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.18",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.20",
     "netlify-plugin-gatsby-cache": "^0.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.32.5",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.9.0",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "textlint": "^11.8.1",
+    "stylelint": "^13.11.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "textlint": "^11.8.2",
     "textlint-rule-write-good": "^1.6.2",
     "ts-standard": "^10.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.2"
   },
   "dependencies": {
-    "@hookform/resolvers": "^1.3.2",
-    "@icons-pack/react-simple-icons": "^4.0.0",
-    "@reach/dialog": "^0.12.1",
-    "@reach/tabs": "^0.12.1",
-    "@reach/visually-hidden": "^0.12.0",
-    "@stripe/stripe-js": "^1.11.0",
+    "@hookform/resolvers": "^1.3.5",
+    "@icons-pack/react-simple-icons": "^4.1.0",
+    "@reach/dialog": "^0.13.2",
+    "@reach/tabs": "^0.13.2",
+    "@reach/visually-hidden": "^0.13.2",
     "body-parser": "^1.19.0",
-    "date-fns": "^2.16.1",
-    "faunadb": "^4.0.3",
-    "gatsby": "^2.31.1",
-    "gatsby-image": "^2.10.0",
-    "gatsby-link": "^2.10.0",
-    "gatsby-plugin-catch-links": "^2.9.0",
+    "date-fns": "^2.17.0",
+    "faunadb": "^4.1.1",
+    "gatsby": "^2.32.8",
+    "gatsby-image": "^2.11.0",
+    "gatsby-link": "^2.11.0",
+    "gatsby-plugin-catch-links": "^2.10.0",
     "gatsby-plugin-csp": "^1.1.3",
     "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-local-search": "^2.0.0",
-    "gatsby-plugin-manifest": "^2.11.0",
-    "gatsby-plugin-netlify": "^2.10.0",
-    "gatsby-plugin-netlify-identity-gotrue": "^0.3.3",
-    "gatsby-plugin-nprogress": "^2.9.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-netlify": "^2.11.0",
+    "gatsby-plugin-netlify-identity-gotrue": "^0.3.4",
+    "gatsby-plugin-nprogress": "^2.10.0",
     "gatsby-plugin-purgecss": "5.0.0",
-    "gatsby-plugin-react-helmet": "^3.9.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.13.1",
-    "gatsby-plugin-sitemap": "^2.11.0",
-    "gatsby-plugin-twitter": "^2.9.0",
-    "gatsby-plugin-typescript": "^2.11.0",
-    "gatsby-remark-copy-linked-files": "^2.9.0",
-    "gatsby-remark-images": "^3.10.0",
-    "gatsby-remark-responsive-iframe": "^2.10.0",
-    "gatsby-remark-smartypants": "^2.9.0",
-    "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-twitter": "^2.10.0",
+    "gatsby-plugin-typescript": "^2.12.1",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
+    "gatsby-remark-images": "^3.11.1",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-smartypants": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-source-stripe": "^3.2.1",
-    "gatsby-transformer-remark": "^2.15.0",
-    "gatsby-transformer-sharp": "^2.11.0",
-    "gotrue-js": "^0.9.28",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "gotrue-js": "^0.9.29",
     "node-fetch": "^2.6.1",
     "password-validator": "^5.1.1",
-    "query-string": "^6.13.8",
-    "react-bootstrap": "^1.4.3",
-    "react-hook-form": "^6.14.2",
-    "react-icons": "^4.1.0",
+    "query-string": "^6.14.1",
+    "react-bootstrap": "^1.5.0",
+    "react-hook-form": "^6.15.4",
+    "react-icons": "^4.2.0",
     "react-parallax": "^3.2.1",
-    "react-player": "^2.8.1",
+    "react-player": "^2.9.0",
     "react-responsive-masonry": "2.1.1",
     "react-use-flexsearch": "^0.1.1",
     "secure-random-password": "^0.2.2",
-    "yup": "^0.32.8"
+    "sharp": "^0.27.2",
+    "yup": "^0.32.9"
   }
 }
