--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "rootDir": "./",
     "typeRoots": [
         "node_modules/@types",
-        "@types"
+        "@types",
+        "./types"
     ],
     "noFallthroughCasesInSwitch": true
   },
