--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "password-validator": "^5.1.1",
     "query-string": "^6.14.1",
     "react-bootstrap": "^1.5.0",
+    "react-countdown": "^2.3.1",
     "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
     "react-parallax": "^3.2.1",
