Remove Netlify Identity

--- a/package.json
+++ b/package.json
@@ -14,20 +14,18 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "lint-code": "yarn ts-standard ./src --project ./tsconfig.json;  yarn ts-standard ./functions --project ./functions/tsconfig.json",
+    "lint-code": "yarn ts-standard ./src --project ./tsconfig.json",
     "lint-styles": "npx stylelint ./src/**/**/*.scss",
     "lint-words": "textlint ./content/posts/**/index.md",
-    "plzfixmycode": "yarn ts-standard ./src --fix --project ./tsconfig.json;  yarn ts-standard ./functions --fix --project ./functions/tsconfig.json",
+    "plzfixmycode": "yarn ts-standard ./src --fix --project ./tsconfig.json",
     "plzfixmystyles": "npx stylelint ./src/**/**/*.scss --fix",
     "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "chromatic": "chromatic --auto-accept-changes",
-    "netlify-functions-build": "tsc --project ./functions/tsconfig.json",
-    "netlify-functions-clean": "rimraf ./functions/build",
     "run-pa11y": "cd scripts/Pa11yRunner && cabal run :Pa11yRunner",
-    "clean-all": "yarn clean && yarn netlify-functions-clean",
-    "build-all": "yarn netlify-functions-build && yarn build"
+    "clean-all": "yarn clean",
+    "build-all": "yarn build"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -84,11 +82,11 @@
     "gatsby-image": "^2.11.0",
     "gatsby-link": "^2.11.0",
     "gatsby-plugin-catch-links": "^2.10.0",
+    "gatsby-plugin-csp": "1.1.3",
     "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-local-search": "^2.0.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-netlify": "^2.11.0",
-    "gatsby-plugin-netlify-identity-gotrue": "^0.3.4",
     "gatsby-plugin-nprogress": "^2.10.0",
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
