--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "rimraf": "^3.0.2",
+    "sanitize-html": "2.3.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -119,6 +120,7 @@
     "react-use-flexsearch": "^0.1.1",
     "secure-random-password": "^0.2.2",
     "sharp": "^0.27.2",
+    "sqreen": "^1.62.0",
     "yup": "^0.32.9"
   }
 }
