--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "lint-words": "textlint ./content/posts/**/index.md",
     "plzfixmycode": "yarn ts-standard ./src --fix --project ./tsconfig.json",
     "plzfixmystyles": "npx stylelint ./src/**/**/*.scss --fix",
-    "plzfixmywords": "npx textlint ./content/posts/**/index.md --fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "chromatic": "chromatic --auto-accept-changes",
@@ -28,44 +27,42 @@
     "build-all": "yarn build"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
+    "@babel/core": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@popperjs/core": "^2.8.6",
-    "@storybook/addon-actions": "^6.1.20",
-    "@storybook/addon-essentials": "^6.1.20",
-    "@storybook/addon-links": "^6.1.20",
+    "@popperjs/core": "^2.9.1",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.1.20",
-    "@types/aws-lambda": "^8.10.72",
-    "@types/node": "^14.14.31",
+    "@storybook/react": "^6.1.21",
+    "@types/aws-lambda": "^8.10.73",
+    "@types/node": "^14.14.35",
     "@types/react-helmet": "^6.1.0",
     "animate.css": "^4.1.1",
     "babel-loader": "^8.2.2",
-    "babel-plugin-remove-graphql-queries": "^2.16.1",
+    "babel-plugin-remove-graphql-queries": "^3.1.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^5.0.0-beta1",
-    "chromatic": "^5.6.3",
-    "css-loader": "^5.1.0",
+    "chromatic": "^5.7.0",
+    "css-loader": "^5.2.0",
     "font-awesome": "^4.7.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "rimraf": "^3.0.2",
     "sanitize-html": "2.3.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.11.0",
+    "stylelint": "^13.12.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
-    "textlint": "^11.8.2",
-    "textlint-rule-write-good": "^1.6.2",
     "ts-standard": "^10.0.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "@hookform/resolvers": "^1.3.5",
@@ -73,43 +70,39 @@
     "@reach/dialog": "^0.13.2",
     "@reach/tabs": "^0.13.2",
     "@reach/visually-hidden": "^0.13.2",
-    "gatsby": "^2.32.8",
-    "gatsby-image": "^2.11.0",
-    "gatsby-link": "^2.11.0",
-    "gatsby-plugin-catch-links": "^2.10.0",
+    "gatsby": "^3.1.2",
+    "gatsby-link": "^3.1.0",
+    "gatsby-plugin-catch-links": "^3.1.0",
     "gatsby-plugin-csp": "1.1.3",
-    "gatsby-plugin-google-gtag": "^2.8.0",
+    "gatsby-plugin-google-gtag": "^3.1.0",
+    "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-local-search": "^2.0.0",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-netlify": "^2.11.0",
-    "gatsby-plugin-nprogress": "^2.10.0",
-    "gatsby-plugin-purgecss": "5.0.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-netlify": "^3.1.0",
+    "gatsby-plugin-nprogress": "^3.1.0",
+    "gatsby-plugin-purgecss": "6.0.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sass": "^3.2.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-plugin-typescript": "^2.12.1",
-    "gatsby-remark-copy-linked-files": "^2.10.0",
-    "gatsby-remark-images": "^3.11.1",
-    "gatsby-remark-responsive-iframe": "^2.11.0",
-    "gatsby-remark-smartypants": "^2.10.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-source-stripe": "^3.2.1",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "query-string": "^6.14.1",
-    "react-bootstrap": "^1.5.0",
+    "gatsby-plugin-sass": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-plugin-sitemap": "^3.1.0",
+    "gatsby-plugin-typescript": "^3.1.0",
+    "gatsby-remark-copy-linked-files": "^3.1.0",
+    "gatsby-remark-smartypants": "^3.1.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "query-string": "^7.0.0",
+    "react-bootstrap": "^1.5.2",
     "react-countdown": "^2.3.1",
-    "react-hook-form": "^6.15.4",
+    "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
     "react-parallax": "^3.2.1",
     "react-player": "^2.9.0",
     "react-responsive-masonry": "2.1.1",
     "react-use-flexsearch": "^0.1.1",
     "sharp": "^0.27.2",
-    "sqreen": "^1.62.0",
     "yup": "^0.32.9"
   }
 }
